--- a/src/main/resources/templates/bookings.html
+++ b/src/main/resources/templates/bookings.html
@@ -13,7 +13,7 @@
 		<tr >
 			<th>Booking Id</th>
 			<th>Member Name</th>
-			<th>User Name</th>
+			<th>User Names</th>
 			<th>Facility Name</th>
 			<th>From Date</th>
 			<th>End Date</th>
